--- a/assets/sass/layout/_homepage.sass
+++ b/assets/sass/layout/_homepage.sass
@@ -304,6 +304,7 @@ section
                 
                 #skills
                     width: 95%
+                    color: $brand-color
 
                     @include respond-to(smallDevices)
                         width: 100% !important
@@ -335,6 +336,8 @@ section
                         border: 0px !important
 
                         .card-header
+                            background: $brand-color-opacity !important
+                            border-color: $brand-color !important
 
                             button
                                 color: $brand-color
