--- a/assets/sass/layout/_extend.sass
+++ b/assets/sass/layout/_extend.sass
@@ -5,6 +5,7 @@
 %title
 
     h3
+        font-family: $title-font
         margin: 0 auto;
         text-transform: lowercase
         font-size: 35px
@@ -18,11 +19,11 @@
         &::after
             position: absolute
             content: ""
-            left: 50px
-            @include transform(rotateX(180deg))
-            font-style: italic
-            top: 93px
-            color: #e4e4e4
+            left: 60px
+            // @include transform(rotateX(180deg))
+            // font-style: italic
+            top: 75px
+            color: #dedede
             font-size: 36px
             z-index: -100
             letter-spacing: -1px
