--- a/assets/sass/layout/_homepage.sass
+++ b/assets/sass/layout/_homepage.sass
@@ -394,18 +394,49 @@ section
                     h3
                         &::after
                             content: "ontact me"
-                            left: 86px
-                            top: 74px
+                            left: 46px
+                            top: 73px
+                        
+                            @include respond-to(handhelds)
+                                top: 80px !important
+                                left: 46px !important
+                
+                input, textarea
+                        border: none !important
+                        border-bottom: 1px solid #f1f1f1 !important
+                        border-radius: 0px !important
+                        margin-bottom: 20px !important
 
-                label
-                    display: none
+                        &:focus
+                            border-bottom: 1px solid $brand-color !important
+                            box-shadow: none !important
                             
+                .personal-info
+                    margin-top: 30px
+
+                    h5
+                        font-size: 18px
+                        line-height: 20px
+                
+                .icons-contact
+                    margin-top: 20px
+
+                    span
+                        font-size: 20px
+                    
+                    svg
+                        @include transition(all 0.7s ease)
+                        margin-right: 5px
+
+                        &:hover
+                            @include transition(all 0.7s ease)
+                            @include transform(scale(1.4,1.4))
 
 .btn-success
     background: $brand-color !important
     border-color: $brand-color !important
     border: 2px solid #1DBF73!important
-    border-radius: 22px
+    // border-radius: 22px
 
     &:hover
         background: $hover-color !important
@@ -413,7 +444,7 @@ section
 .btn-outline-success
     border-color: $brand-color !important
     border: 2px solid #1DBF73!important
-    border-radius: 22px
+    // border-radius: 22px
 
     &:hover
         background: $hover-color !important
