--- a/assets/sass/base/_colors.sass
+++ b/assets/sass/base/_colors.sass
@@ -3,6 +3,6 @@ $black: #000
 $white: #fff
 $dark: #222
 $grey: #555
-$brand-color: #1DBF73
+$brand-color: #280A4A
 $brand-color-opacity: #1dbf7314
-$hover-color: #1b985e
+$hover-color: #17062b
