"changed brand color"

--- a/assets/sass/base/_colors.sass
+++ b/assets/sass/base/_colors.sass
@@ -3,6 +3,6 @@ $black: #000
 $white: #fff
 $dark: #222
 $grey: #555
-$brand-color: #280A4A
+$brand-color: #001d34
 $brand-color-opacity: #1dbf7314
 $hover-color: #17062b
