--- a/assets/sass/layout/_homepage.sass
+++ b/assets/sass/layout/_homepage.sass
@@ -29,23 +29,29 @@ body
     background-color: #fff
 
 ::-webkit-scrollbar
-    width: 10px
+    display: none;
+    width: 15px
     background-color: #fff
 
 ::-webkit-scrollbar-thumb:hover
-    background: #280a4a
-    background: -moz-linear-gradient(top,  #280a4a 0%, #7a59a5 14%, #7a59a5 14%, #463b70 72%, #280a4a 93%)
-    background: -webkit-linear-gradient(top,  #280a4a 0%,#7a59a5 14%,#7a59a5 14%,#463b70 72%,#280a4a 93%)
-    background: linear-gradient(to bottom,  #280a4a 0%,#7a59a5 14%,#7a59a5 14%,#463b70 72%,#280a4a 93%)
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#280a4a', endColorstr='#280a4a',GradientType=0 )
+    background: #001d34;
+
 
 ::-webkit-scrollbar-thumb
+    display: none;
     // border-radius: 10px
-    background: #280a4a
-    background: -moz-linear-gradient(top, #280a4a 0%, #463b70 26%, #463b70 26%, #280a4a 85%, #7a59a5 100%)
-    background: -webkit-linear-gradient(top, #280a4a 0%,#463b70 26%,#463b70 26%,#280a4a 85%,#7a59a5 100%)
-    background: linear-gradient(to bottom, #280a4a 0%,#463b70 26%,#463b70 26%,#280a4a 85%,#7a59a5 100%)
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#280a4a', endColorstr='#7a59a5',GradientType=0 )
+    background: #001d34;
+    background: -moz-linear-gradient(left,  #001d34 0%, #083a5b 100%, #7db9e8 100%);
+    background: -webkit-linear-gradient(left,  #001d34 0%,#083a5b 100%,#7db9e8 100%);
+    background: linear-gradient(to right,  #001d34 0%,#083a5b 100%,#7db9e8 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#001d34', endColorstr='#7db9e8',GradientType=1 );
+
+.main-div:hover ::-webkit-scrollbar
+    display: inline;
+    
+.main-div:hover ::-webkit-scrollbar-thumb
+    display: inline;
+
 
 html 
     overflow: scroll
